fixed z-index on rays

--- a/_sass/components/_gui.scss
+++ b/_sass/components/_gui.scss
@@ -1,5 +1,7 @@
 #gui {
 	height: 30vh;
+	position: relative;
+	z-index: 2;
 }
 
 .home-button {
